# TransPakQuoteCrewAI

./: PROJECT_STRUCTURE.md  a2a_agent_adapters.py  a2a_api_routes.py  a2a_protocol.py  agent_memory.py  agents.py  ai_enhancements.py  analytics_dashboard.py  api_test_suite.py  app.py  cache_manager.py  celery_app.py  crew_manager.py  direct_quote_generator.py  enhanced_dashboard_api.py  enhanced_pricing_engine.py  error_handler.py  external_agent_connector.py  external_data_sources.py  models.py  monitoring_config.py  pricing_tools.py  pyproject.toml  real_time_agent_monitor.py  routes.py  routes_fixed.py  security_middleware.py  simple_quote_test.py  tasks.py  test_routes.py
attached_assets/: Pasted-Assembling-the-Crew-and-Launching-the-Mission-Concept-We-have-an-agent-the-worker-and-a-task-the-1749879042958_1749879042959.txt  Pasted-Building-Our-First-Agent-The-Sales-Specialist-Concept-Now-that-we-have-our-AI-Brain-configured--1749878580895_1749878580896.txt  Pasted-Configuring-with-OpenAI-Step-0-Install-the-OpenAI-Library-First-we-need-to-add-the-specific-librar-1749877876387_1749877876388.txt  Pasted-Creating-a-Task-for-Our-Agent-Concept-An-Agent-is-the-worker-A-Task-is-the-specific-work-assignmen-1749878811247_1749878811249.txt  Pasted-Test-Plan-TransPak-AI-Quoter-SystemThis-document-outlines-the-test-cases-required-to-validate-the-f-1749879226167_1749879226169.txt  Pasted-The-AI-Workforce-Our-Crew-of-Agents-Our-system-will-be-composed-of-a-crew-of-four-distinct-AI-age-1749877714773_1749877714773.txt  (+1 more)
static/: app.js
templates/: a2a_demo.html  admin_dashboard.html  (+10 more)
(+7 files in other folders)
