[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.130.0",
    "crewai-tools>=0.47.1",
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "openai>=1.86.0",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.4.0",
    "sqlalchemy>=2.0.41",
]
