[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.5.3",
    "crewai>=0.130.0",
    "crewai-tools>=0.47.1",
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-dance>=7.1.0",
    "flask-jwt-extended>=4.7.1",
    "flask-limiter>=3.12",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-socketio>=5.5.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "langchain-openai>=0.2.14",
    "oauthlib>=3.2.2",
    "openai>=1.86.0",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "pytest>=8.4.0",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "sentry-sdk>=2.30.0",
    "sqlalchemy>=2.0.41",
    "sqlalchemy-utils>=0.41.2",
    "twilio>=9.6.3",
    "werkzeug>=3.1.3",
]
